@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2014, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -54,7 +54,7 @@ FSL_TEST_FUNCTION( decode_wchar_t ) {
 
 
 FSL_TEST_FUNCTION( coerce ) {
-    char s[] = { 0xc3, 0xa6, 0x00 };
+    char s[] = { '\xc3', '\xa6', '\x00' };
     FSL_CHECK_EQ( fostlib::coerce< fostlib::string >( fostlib::ascii_string( "abc" ) ), L"abc" );
 
     FSL_CHECK_EQ( fostlib::coerce< fostlib::string >( fostlib::utf8_string( "abc" ) ), L"abc" );
