@@ -1,5 +1,5 @@
 /*
-    Copyright 2000-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2000-2014, Felspar Co Ltd. http://fost.3.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -13,24 +13,6 @@
 
 
 using namespace fostlib;
-
-
-fostlib::date::date() {
-}
-fostlib::date::date( boost::gregorian::date d )
-: m_date( d ) {
-}
-fostlib::date::date( int year, int month, int day )
-: m_date( year, month, day ) {
-}
-
-
-bool fostlib::date::operator == ( const date &r ) const {
-    return m_date == r.m_date;
-}
-bool fostlib::date::operator != ( const date &r ) const {
-    return m_date != r.m_date;
-}
 
 
 string fostlib::coercer< string, date >::coerce( date d ) {
