@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2012, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2014, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -7,6 +7,7 @@
 
 
 #include <fost/datetime>
+#include <fost/log>
 #include <fost/test>
 
 
@@ -36,6 +37,62 @@ FSL_TEST_FUNCTION( json ) {
     FSL_CHECK(!j.get< fostlib::string >().isnull());
     FSL_CHECK_EQ( j, fostlib::json("2012-10-04T13:45:00Z") );
     FSL_CHECK_EQ( fostlib::coerce< fostlib::timestamp >( j ), n );
+}
+
+
+FSL_TEST_FUNCTION( json_now ) {
+    fostlib::timestamp n(fostlib::timestamp::now());
+    fostlib::json j( fostlib::coerce< fostlib::json >( n ) );
+    fostlib::log::debug()
+        ("n", "string", fostlib::coerce<fostlib::string>(n))
+        ("n", "json", j);
+    FSL_CHECK(!j.get< fostlib::string >().isnull());
+    FSL_CHECK_EQ( fostlib::coerce< fostlib::string >( n ).length(), 27);
+    FSL_CHECK_EQ( fostlib::coerce< fostlib::timestamp >( j ), n );
+}
+
+
+FSL_TEST_FUNCTION( json_microsecond ) {
+    fostlib::timestamp n(fostlib::timestamp(2012, 10, 4, 13, 45, 3, 456789));
+    fostlib::json j( fostlib::coerce< fostlib::json >( n ) );
+    FSL_CHECK(!j.get< fostlib::string >().isnull());
+    FSL_CHECK_EQ( j, fostlib::json("2012-10-04T13:45:03.456789Z") );
+    FSL_CHECK_EQ( fostlib::coerce< fostlib::timestamp >( j ), n );
+}
+
+
+FSL_TEST_FUNCTION(parse_with_Z_short) {
+    fostlib::string n("2014-01-13T10:45Z");
+    FSL_CHECK_EQ(fostlib::coerce< fostlib::timestamp >(n),
+        fostlib::timestamp(2014, 1, 13, 10, 45));
+}
+
+
+FSL_TEST_FUNCTION(parse_without_Z_short) {
+    fostlib::string n("2014-01-13T10:45");
+    FSL_CHECK_EQ(fostlib::coerce< fostlib::timestamp >(n),
+        fostlib::timestamp(2014, 1, 13, 10, 45));
+}
+
+
+FSL_TEST_FUNCTION(parse_with_Z_long) {
+    fostlib::string n("2014-01-13T10:45:34.456734Z");
+    FSL_CHECK_EQ(fostlib::coerce< fostlib::timestamp >(n),
+        fostlib::timestamp(2014, 1, 13, 10, 45, 34, 456734));
+}
+
+
+FSL_TEST_FUNCTION(parse_without_Z_long) {
+    fostlib::string n("2014-01-13T10:45:34.456734");
+    FSL_CHECK_EQ(fostlib::coerce< fostlib::timestamp >(n),
+        fostlib::timestamp(2014, 1, 13, 10, 45, 34, 456734));
+}
+
+
+FSL_TEST_FUNCTION(parse_with_date) {
+    fostlib::string n("2014-01-13");
+    FSL_CHECK_EQ(fostlib::coerce< fostlib::timestamp >(n),
+        fostlib::timestamp(2014, 1, 13));
 }
 
 
