@@ -1,5 +1,5 @@
 /*
-    Copyright 2001-2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2001-2014, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -72,6 +72,10 @@
 
 #if INT_MAX != LONG_MAX && LONG_MAX != LLONG_MAX
     #define FOST_USE_LONG
+#endif
+
+#ifdef FOST_TOOLSET_GCC
+    #pragma GCC diagnostic ignored "-Wunused-local-typedefs"
 #endif
 
 #include <boost/utility.hpp>
